syntax = "proto3";

option csharp_namespace = "GrpcMessage";

message MessageQueueRequest {
	string id = 1;
	string sender = 2;
	string message = 3;
}

message ProcessResponse {
	string id = 1;
	string engine = 2;
	int32 messageLength = 3;
	bool isValid = 4;
	map<string, bool> additionalFields = 5;
}

service MessageProcessor {
	rpc ProcessMessage (stream MessageQueueRequest) returns (stream ProcessResponse);
}